--- a/rmn-be/appsettings.json
+++ b/rmn-be/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MyCnn": "server =(local); database = SEP_database;uid=sa;pwd=123;Trusted_Connection=True;Trust Server Certificate=True"
+  },
+  "Jwt": {
+    "Key": "THIS_IS_A_DEMO_KEY_CHANGE_ME_TO_A_LONG_RANDOM_SECRET_32+",
+    "Issuer": "SEP_Restaurant_management",
+    "Audience": "SEP_Restaurant_management",
+    "ExpireMinutes": 120
+  },
   "AllowedHosts": "*"
 }
